--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -1,13 +1,10 @@
 source 'https://rubygems.org'
 
 gem "bcrypt", "~> 3.1.10"
-gem "grape", "~> 0.12.0"
+gem "em-websocket", "~> 0.5.1"
 gem "jwt", "~> 1.5.2"
 gem "pg", "~> 0.18.2"
-gem "rack-contrib", "~> 1.4.0"
-gem "rack-cors", "~> 0.4.0"
 gem "sequel", "~> 4.25.0"
-gem "thin", "~> 1.6.3"
 
 group :development do
   gem "pry-byebug"
