--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -11,5 +11,7 @@ group :development do
 end
 
 group :test do
-  gem "rspec"
+  gem "rspec", "~> 3.4.0"
+  gem "factory_girl", "~> 4.5.0"
+  gem "database_cleaner", "~> 1.5.1"
 end
