Rename package in package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project1",
+  "name": "spa-seed-pistos",
   "description": "A Vue.js project",
   "author": "Pistos <git dawt pistos aet purepistos dawt net>",
   "private": true,
