--- a/backend/Gemfile
+++ b/backend/Gemfile
@@ -11,7 +11,10 @@ group :development do
 end
 
 group :test do
+  gem "capybara", "~> 2.7.1"
   gem "database_cleaner", "~> 1.5.1"
   gem "factory_girl", "~> 4.5.0"
+  gem "poltergeist", "~> 1.9.0"
   gem "rspec", "~> 3.4.0"
+  gem "selenium-webdriver", "~> 2.53.3"
 end
